--- a/random_forest.Rmd
+++ b/random_forest.Rmd
@@ -89,6 +89,7 @@ recipe <-
   step_center(all_numeric_predictors()) %>% # note: apparently aaron said that this won't affect random forest
   step_holiday(date, holidays = timeDate::listHolidays("US")) %>% # aaron said we should put more weight on some holidays rather than other, for example 4th of july and inauguration day especially since we are looking at lincoln memorial
   step_nzv() %>% # aaron suggested adding this
+  step_other() # add this for any categorical predictors
   
   #notice that we also need to add some transformation of the dependent variable
 
