--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -87,7 +87,7 @@ hour_date_date <- add_date_column(hour_data)
 set.seed(28021995)
 
 # create a split object
-data_split <- initial_split(hour_data_date, prop = 0.8)
+data_split <- initial_split(hour_date_date, prop = 0.8)
 
 # create the training and testing data
 train_date_date <- training(x = data_split)
@@ -99,12 +99,16 @@ test_date_date  <- testing(x = data_split)
 ```{r stats_dependent}
 
 train_date_date%>%
-  summarize(mean(lincoln_memorial), max(lincoln_memorial), min(lincoln_memorial), sd(lincoln_memorial)) # how can we get better sumamry stats? maybe not split by hour?
+  summarize(mean(lincoln_memorial_departures), max(lincoln_memorial_departures), min(lincoln_memorial_departures), sd(lincoln_memorial_departures)) # how can we get better summary stats? maybe not split by hour?
 
 ```
 
 
 ```{r stats_weather}
+
+# check how much NA in temprature variable
+sum(is.na(train_date_date$temperature)) 
+# 9374, we might want to do imputation on this
 
 train_date_date %>%
  # mutate(weekday = wday(date, label=TRUE)) %>%
@@ -116,17 +120,15 @@ train_date_date %>%
 ```{r stats_dependent1}
 
 train_date_date %>%
-  filter(type != "arrivals") %>%
-  ggplot(aes(x=lincoln_memorial))+
+  ggplot(aes(x=lincoln_memorial_departures))+
   geom_density()
 ```
 
 ```{r stats_dependent2}
 
 train_date_date %>%
-  filter(lincoln_memorial != 0) %>% # notice that we here are dropping 0s because then the visualization will be much clearer
-  filter(type != "arrivals") %>%
-  ggplot(aes(x=lincoln_memorial))+
+  filter(lincoln_memorial_departures != 0) %>% # notice that we here are dropping 0s because then the visualization will be much clearer
+  ggplot(aes(x=lincoln_memorial_departures))+
   geom_density() # this is showing that it is heavily skewed and we might want to transform our dependent variable in our random forest. Aaron said we should look at Box Cox or Eon Johnson transfomation. Or simple log
 ```
 
@@ -138,8 +140,7 @@ Amount of rides at the Lincoln memorial over all the time, and by various metric
 ```{r visualizations}
 
 train_date_date %>%  # for me here there is a weird gap after July 2020, not sure why?
-  filter(type != "arrivals") %>%
-  ggplot(aes(x = date, y = lincoln_memorial)) +
+  ggplot(aes(x = date, y = lincoln_memorial_departures)) +
   geom_point(alpha= 0.1, color="orange") + 
   geom_smooth()
 ```
@@ -147,9 +148,8 @@ train_date_date %>%  # for me here there is a weird gap after July 2020, not sur
 ```{r weekday}
 # by weekday
 train_date_date %>% 
-  filter(type != "arrivals") %>%
   mutate(weekday = wday(date, label=TRUE)) %>% 
-  ggplot(aes(x = weekday, y = lincoln_memorial)) +
+  ggplot(aes(x = weekday, y = lincoln_memorial_departures)) +
   geom_point(alpha=0.1) + # clearly people cycle more on saturdays and sundays
   geom_smooth()
 
@@ -167,8 +167,7 @@ train_date_date %>%
 ```{r dayofmonth}
 # by day of the month
 train_date_date %>% 
-  filter(type != "arrivals") %>%
-  ggplot(aes(x = day, y = lincoln_memorial)) +
+  ggplot(aes(x = day, y = lincoln_memorial_departures)) +
   geom_point(alpha=0.1, color="salmon") + # there is no clear pattern across days of the month - aka probably not a good predictor
   geom_smooth()
 
@@ -178,8 +177,7 @@ train_date_date %>%
 
 # by hour
 train_date_date %>%
-  filter(type != "arrivals") %>%
-  ggplot(aes(x = hour, y = lincoln_memorial)) +
+  ggplot(aes(x = hour, y = lincoln_memorial_departures)) +
   geom_point(alpha= 0.1, color="blue") + # people cycle more in the middle of the day, like between 1 and 7PM
   geom_smooth()
 
@@ -189,8 +187,7 @@ train_date_date %>%
 
 # by hour & month
 train_date_date %>%
-  filter(type != "arrivals") %>%
-  ggplot(aes(x = hour, y = lincoln_memorial)) +
+  ggplot(aes(x = hour, y = lincoln_memorial_departures)) +
   geom_point(alpha= 0.1, color="dark green") + # people cycle more in the middle of the day, like between 1 and 7PM
   geom_smooth() +
   facet_wrap(~month)
@@ -201,8 +198,7 @@ train_date_date %>%
 ```{r month}
 
 train_date_date %>% 
-  filter(type != "arrivals") %>%
-  ggplot(aes(x = month, y = lincoln_memorial)) +
+  ggplot(aes(x = month, y = lincoln_memorial_departures)) +
   geom_point(alpha=0.1, color="dark red") + # people cycle most in Spring, summer and fall. Suprised that there is no big spike in summer months
   geom_smooth() # why does the smooth line not work here
 
@@ -212,8 +208,7 @@ train_date_date %>%
 ```{r year}
 
 train_date_date %>% # something is off with the year variable, how can we remove the space in the middle?
-  filter(type != "arrivals") %>%
-  ggplot(aes(x = year, y = lincoln_memorial)) +
+  ggplot(aes(x = year, y = lincoln_memorial_departures)) +
   geom_point(alpha=0.1) + # overall, more people use the service in 2021 than in 2020
   geom_smooth()
 
@@ -223,9 +218,8 @@ train_date_date %>% # something is off with the year variable, how can we remove
 
 # for a specific month and day, seeing variance by hour
 train_date_date %>% 
-  filter(type != "arrivals") %>%
   filter(year == 2021, month == "Aug", day == 15) %>% 
-  ggplot(aes(x  =hour, y = lincoln_memorial)) +
+  ggplot(aes(x  =hour, y = lincoln_memorial_departures)) +
   geom_line(color="Red")
 
 ```
@@ -279,9 +273,9 @@ dep_sf %>%
 
 ```{r temperatures}
 
+
 train_date_date %>%
-  filter(type != "arrivals") %>%
-  ggplot(aes(x=temperature,y=lincoln_memorial))+
+  ggplot(aes(x=temperature,y=lincoln_memorial_departures))+
   geom_point(alpha=0.07,color='orange')+
   labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
   geom_smooth() # as the temperature goes up, departures and arrivals go up
@@ -291,8 +285,7 @@ train_date_date %>%
 ```{r temperatures_month}
 
 train_date_date %>%
-  filter(type != "arrivals") %>%
-  ggplot(aes(x=temperature,y=lincoln_memorial))+
+  ggplot(aes(x=temperature,y=lincoln_memorial_departures))+
   geom_point(alpha=0.07,color='orange')+
   labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
   geom_smooth() + #super confused as to why november and december have hot temperature?
@@ -306,8 +299,7 @@ train_date_date %>%
 ```{r wind}
 
 train_date_date %>%
-  filter(type != "arrivals") %>%
-  ggplot(aes(x=wind_speed,y=lincoln_memorial))+
+  ggplot(aes(x=wind_speed,y=lincoln_memorial_departures))+
   geom_point(alpha=0.1,color='blue')+
   labs(x='Wind Speed', y= 'Hourly Departures and Arrivals') +
   geom_smooth() # data is sparse hence why we get this weird trend
@@ -318,9 +310,8 @@ train_date_date %>%
 ```{r rain}
 
 train_date_date %>%
-  filter(type != "arrivals") %>%
   filter(precipitation != 0) %>% #removing 0 to better show relationship
-  ggplot(aes(x=precipitation,y=lincoln_memorial))+
+  ggplot(aes(x=precipitation,y=lincoln_memorial_departures))+
   geom_point(alpha=0.1,color='blue')+
   labs(x='Precipitation', y= 'Hourly Departures and Arrivals') +
   geom_smooth() # Negative relationship between bike usage and precipitation as expected
@@ -333,7 +324,7 @@ train_date_date %>%
 ```{r clouds}
 
 train_date_date %>%
-  ggplot(aes(x=cloud_cover,y=lincoln_memorial))+
+  ggplot(aes(x=cloud_cover,y=lincoln_memorial_departures))+
   geom_point(alpha=0.07,color='blue')+
   labs(x='Cloud Cover', y= 'Hourly Departures and Arrivals') +
   geom_smooth()
