Added new predictor

--- a/random_forest.Rmd
+++ b/random_forest.Rmd
@@ -57,7 +57,9 @@ data <- sep_departures_from_arrivals(cbs_data) %>%
 filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 1600)
 
 hour_data <- get_station_hourly(filtered_data) %>%
-  get_historic_weather()
+  get_historic_weather() %>% 
+  add_sun_is_out() %>% 
+  #filter(conditions != "Bad") # To test if bad weather really hurts RMSE that much
 
 lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
 ```
