adding to lasso recipe

--- a/Lasso_regression.Rmd
+++ b/Lasso_regression.Rmd
@@ -100,9 +100,9 @@ lasso_recipe <-
   step_other() %>% # add this for any categorical predictors
   step_BoxCox(all_outcomes()) %>% 
   step_dummy(all_nominal_predictors()) %>%
-  step_center() %>% # definitely need to add these too
-  step_scale() %>% # definitely need to add these too
-  step_dummy() # definitely need to add these too
+  step_center(all_numeric_predictors()) %>% # definitely need to add these too
+  step_scale(all_numeric_predictors()) %>% # definitely need to add these too
+  step_dummy(all_nominal_predictors()) # definitely need to add these too
 
 # see the outcome data
 bake(prep(lasso_recipe, training = lasso_train), new_data = lasso_test)
