--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -238,6 +238,23 @@ train_data_date %>%
 
 ```{r holidays}
 
+# prep training data for holiday barchart - 1 year of data from May 2020 to April 2021
+bar_date <- train_data_date %>%
+  filter(year==2020 | year==2021 & month== "Jan" | year==2021 & month== "Feb"|year==2021 & month== "Mar"|year==2021 & month== "Apr") %>%
+  group_by(year, day, month)%>%
+  summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures))
+
+## confirmed: 365 days exist in this data frame
+# check for missingness 
+sum(is.na(bar_date$lincoln_memorial_departures)) #0
+
+# what is the mean ridership per day
+mean_day <- bar_date %>%
+  group_by(day) %>%
+  summarize(n= mean(lincoln_memorial_departures)) %>%
+  summarize(mean(n))  ## mean per day is 1279
+              
+# create a dataframe for holidays
 holidays <- generated_holidays %>%
   filter(country=="US") 
 
@@ -250,23 +267,32 @@ holidays <- holidays %>%
                      ) %>%
   filter(year==2020 | year==2021) 
 
-holidays_date <- left_join(train_data_date, holidays, by= c('year', 'month', 'day'))
+holidays_date <- left_join(bar_date, holidays, by= c('year', 'month', 'day')) %>%
+    na.omit(holidays) 
 
- bar <- holidays_date %>%
-   filter(year==2020) %>%
-   group_by(day, month) %>%
-   select(holiday, lincoln_memorial_departures, day, month) %>%
-   summarise(lincoln_memorial = sum(lincoln_memorial_departures)) %>%
-   na.omit() %>%
-   
-  ggplot() +
-  geombar()
+holidays_date %>%
+  ggplot(aes(y=lincoln_memorial_departures, x=holiday, fill=lincoln_memorial_departures)) + 
+  geom_bar(stat="identity")+
+  geom_hline(yintercept = 1279, color="blue")+ ## 1279 is the mean ridership per day
+  xlab("") +
+  ylab("Number of departures") +
+  scale_colour_discrete("Holidays")+
+  labs(title = "", caption = "") +
+  guides(fill=guide_legend(title="Number of departures")) +
+  theme_minimal() +
+  theme(plot.caption = element_text(face = "italic")
+  ) 
+
+ ggsave("holidaybar.jpg", width = 50, height = 20, units = "cm")
+
+
 ```
 
 ```
 
 ## Heat maps
 ```{r heat}
+
 # The below data can be used for a heat map - not sure what we want to show though?
 # Why only a very small area is shown in the map?
 
@@ -307,6 +333,7 @@ holidays_date <- left_join(train_data_date, holidays, by= c('year', 'month', 'da
 #   ggplot() + 
 #   geom_sf(data = states, fill = NA ) +
 #   geom_sf(aes(color = departure - arrival), alpha = 0.3)
+
 ```
 
 
