--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -241,7 +241,7 @@ train_data_date %>%
 # prep training data for holiday barchart - 1 year of data from May 2020 to April 2021
 bar_date <- train_data_date %>%
   filter(year==2020 | year==2021 & month== "Jan" | year==2021 & month== "Feb"|year==2021 & month== "Mar"|year==2021 & month== "Apr") %>%
-  group_by(year, day, month)%>%
+  group_by(day, month, year)%>%
   summarise(lincoln_memorial_departures=sum(lincoln_memorial_departures))
 
 ## confirmed: 365 days exist in this data frame
