--- a/motivation.Rmd
+++ b/motivation.Rmd
@@ -7,13 +7,19 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(haven)
 ```
 
+
+## Predicting Capital Bikes Departures
+
+
+could be nice to have a pic at the start
 ```{r setup2}
 knitr::include_graphics("map.png")
 ```
 
-## Predicting Capital Bikes Departures
 
 DC's Capital Bikeshare service has been increasing in popularity, especially during the COVID-19 pandemic, when Washingtonians needed alternatives for public transport. To date it has 5,000 bikes and 600+ stations across 7 jurisdictions. However, users find the service unreliable at times, especially at peak times. In this project, our goal is to use and optimize supervised machine learning models that can predict the number of ride-sharing bikes that will be used at any give hour, using time and weather predictors. For simplicity, we apply our models to one station in particular that has particularly high demand: the Lincoln Memorial station. As such, our target variable will be the number of bikes that departed from that station at a given hour.
 
